Fix MonsterManager being too tall in layout

--- a/src/MonsterManager/MonsterManager.css
+++ b/src/MonsterManager/MonsterManager.css
@@ -3,7 +3,6 @@
 	display: grid;
 	grid-gap: 1rem;
 	grid-template-rows: 4rem auto 3rem;
-	height: 100%;
 	padding: 1rem;
 }
 
